task5/tests/hw5-tests/output/t1.out
lli: <stdin>:49:23: error: use of undefined value '%val'
%t16 = load i32, i32* %val
                      ^
